--- a/backend/scripts/decision_tree.ipynb
+++ b/backend/scripts/decision_tree.ipynb
@@ -15,12 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries for data manipulation, visualization, and modeling\n",
-    "# pandas/numpy: Data handling\n",
-    "# matplotlib/seaborn: Visualization\n",
-    "# sklearn: Machine learning tools (model, metrics, cross-validation)\n",
-    "# joblib: Model serialization\n",
-    "\n",
+    "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,8 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the preprocessed dataset\n",
-    "# This file contains cleaned and feature-engineered data ready for modeling\n",
+    "# Load processed dataset\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
@@ -256,7 +250,7 @@
     }
    ],
    "source": [
-    "# Preview the first few rows of the dataset\n",
+    "# Display first few rows\n",
     "fp.head()"
    ]
   },
@@ -278,7 +272,7 @@
     }
    ],
    "source": [
-    "# Check the dimensions of the dataset (rows, columns)\n",
+    "# Check dataset dimensions\n",
     "fp.shape"
    ]
   },
@@ -289,13 +283,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare features (X) and target variable (y)\n",
-    "# Target: Overall risk level rating column\n",
+    "# Separate features and target, convert to binary classification\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
-    "X = fp.drop(target_col, axis=1)  # All features except target\n",
-    "y = fp[target_col]  # Target variable\n",
-    "\n",
-    "# Convert to binary classification: 1 if above median (high risk), 0 otherwise (low risk)\n",
+    "X = fp.drop(target_col, axis=1)\n",
+    "y = fp[target_col]\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
@@ -306,9 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data into training (80%) and testing (20%) sets\n",
-    "# stratify=y ensures balanced class distribution in both sets\n",
-    "# random_state=42 for reproducibility\n",
+    "# Split data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
@@ -319,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Decision Tree Classifier with default hyperparameters\n",
+    "# Initialize Decision Tree model\n",
     "model = DecisionTreeClassifier(random_state=42)"
    ]
   },
@@ -1227,7 +1216,7 @@
     }
    ],
    "source": [
-    "# Train the Decision Tree model on the training data\n",
+    "# Train the model\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -1238,9 +1227,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions on the test set\n",
-    "# y_pred: Binary predictions (0 or 1)\n",
-    "# y_pred_proba: Probability of positive class (for ROC-AUC calculation)\n",
+    "# Make predictions on test set\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]"
    ]
@@ -1263,7 +1250,7 @@
     }
    ],
    "source": [
-    "# Calculate Accuracy: Proportion of correct predictions\n",
+    "# Calculate accuracy\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
@@ -1285,8 +1272,7 @@
     }
    ],
    "source": [
-    "# Calculate Precision: Proportion of positive predictions that are correct\n",
-    "# High precision = fewer false positives\n",
+    "# Calculate precision\n",
     "precision_score(y_test, y_pred)"
    ]
   },
@@ -1308,8 +1294,7 @@
     }
    ],
    "source": [
-    "# Calculate Recall (Sensitivity): Proportion of actual positives correctly identified\n",
-    "# High recall = fewer false negatives\n",
+    "# Calculate recall\n",
     "recall_score(y_test, y_pred)"
    ]
   },
@@ -1331,8 +1316,7 @@
     }
    ],
    "source": [
-    "# Calculate F1-Score: Harmonic mean of precision and recall\n",
-    "# Balances both metrics (useful for imbalanced datasets)\n",
+    "# Calculate F1-score\n",
     "f1_score(y_test, y_pred)"
    ]
   },
@@ -1354,8 +1338,7 @@
     }
    ],
    "source": [
-    "# Calculate ROC-AUC Score: Model's ability to distinguish between classes\n",
-    "# Score of 1.0 = perfect classifier, 0.5 = random classifier\n",
+    "# Calculate ROC-AUC score\n",
     "roc_auc_score(y_test, y_pred_proba)"
    ]
   },
@@ -1377,7 +1360,7 @@
     }
    ],
    "source": [
-    "# Display comprehensive classification report with all metrics\n",
+    "# Display classification report\n",
     "classification_report(y_test, y_pred)"
    ]
   },
@@ -1399,8 +1382,7 @@
     }
    ],
    "source": [
-    "# Visualize Confusion Matrix\n",
-    "# Shows the distribution of true positives, true negatives, false positives, and false negatives\n",
+    "# Visualize confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
@@ -1428,9 +1410,7 @@
     }
    ],
    "source": [
-    "# Plot ROC Curve (Receiver Operating Characteristic)\n",
-    "# Visualizes the trade-off between true positive rate and false positive rate\n",
-    "# Higher AUC (Area Under Curve) indicates better model performance\n",
+    "# Plot ROC curve\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
     "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
@@ -1460,10 +1440,6 @@
    "outputs": [],
    "source": [
     "# Define hyperparameter grid for tuning\n",
-    "# max_depth: Maximum tree depth (controls overfitting)\n",
-    "# min_samples_split: Minimum samples required to split a node\n",
-    "# min_samples_leaf: Minimum samples required at leaf node\n",
-    "# criterion: Function to measure split quality (gini or entropy)\n",
     "param_grid = {\n",
     "    \"max_depth\": [None, 5, 10, 15, 20],\n",
     "    \"min_samples_split\": [2, 5, 10],\n",
@@ -1480,9 +1456,6 @@
    "outputs": [],
    "source": [
     "# Initialize GridSearchCV for hyperparameter tuning\n",
-    "# cv=5: 5-fold cross-validation\n",
-    "# scoring='accuracy': Optimize for accuracy\n",
-    "# n_jobs=-1: Use all available CPU cores\n",
     "grid = GridSearchCV(DecisionTreeClassifier(random_state=42), param_grid, cv=5, scoring='accuracy', n_jobs=-1)"
    ]
   },
@@ -2571,8 +2544,7 @@
     }
    ],
    "source": [
-    "# Train the model with all hyperparameter combinations using cross-validation\n",
-    "# This will find the best combination of parameters\n",
+    "# Train model with hyperparameter tuning\n",
     "grid.fit(X_train, y_train)"
    ]
   },
@@ -2592,7 +2564,7 @@
     }
    ],
    "source": [
-    "# Display the best hyperparameters and their cross-validation accuracy\n",
+    "# Display best hyperparameters\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV accuracy:\", grid.best_score_)"
    ]
@@ -2604,7 +2576,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the best model from GridSearchCV\n",
+    "# Get best model\n",
     "best_model = grid.best_estimator_"
    ]
   },
@@ -2615,7 +2587,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions using the tuned model\n",
+    "# Make predictions with tuned model\n",
     "y_pred_tuned = best_model.predict(X_test)\n",
     "y_pred_proba_tuned = best_model.predict_proba(X_test)[:, 1]"
    ]
@@ -2638,7 +2610,7 @@
     }
    ],
    "source": [
-    "# Calculate accuracy of the tuned model\n",
+    "# Calculate accuracy of tuned model\n",
     "accuracy_score(y_test, y_pred_tuned)"
    ]
   },
@@ -2660,7 +2632,7 @@
     }
    ],
    "source": [
-    "# Display classification report for the tuned model\n",
+    "# Display classification report for tuned model\n",
     "classification_report(y_test, y_pred_tuned)"
    ]
   },
@@ -2682,7 +2654,7 @@
     }
    ],
    "source": [
-    "# Visualize confusion matrix for the tuned model\n",
+    "# Visualize confusion matrix for tuned model\n",
     "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm_tuned, annot=True, fmt='d', cmap='Greens')\n",
@@ -2710,8 +2682,7 @@
     }
    ],
    "source": [
-    "# Compare model performance before and after hyperparameter tuning\n",
-    "# Visualize all metrics side by side\n",
+    "# Compare model performance before and after tuning\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC']\n",
     "before = [accuracy_score(y_test, y_pred), precision_score(y_test, y_pred), \n",
     "          recall_score(y_test, y_pred), f1_score(y_test, y_pred), roc_auc_score(y_test, y_pred_proba)]\n",
@@ -2756,9 +2727,7 @@
     }
    ],
    "source": [
-    "# Save the trained model to disk for later use\n",
-    "# Creates the models directory if it doesn't exist\n",
-    "# Saves the best model as a pickle file\n",
+    "# Save the trained model\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(best_model, '../models/decision_tree_model.pkl')\n",
     "print(\"Model saved!\")"
