--- a/backend/scripts/svm.ipynb
+++ b/backend/scripts/svm.ipynb
@@ -10,17 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d16c1f35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import necessary libraries for data manipulation, visualization, and modeling\n",
-    "# pandas/numpy: Data handling and numerical operations\n",
-    "# matplotlib/seaborn: Data visualization\n",
-    "# sklearn: Machine learning tools (SVM, metrics, cross-validation)\n",
-    "# joblib: Model serialization for saving trained models\n",
-    "\n",
+    "# Import required libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,8 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load the preprocessed dataset\n",
-    "# This file contains cleaned and feature-engineered data ready for modeling\n",
+    "# Load processed dataset\n",
     "fp = pd.read_csv(\"../data/women_risk_processed.csv\")"
    ]
   },
@@ -256,7 +250,7 @@
     }
    ],
    "source": [
-    "# Preview the first few rows of the dataset\n",
+    "# Display first few rows\n",
     "fp.head()"
    ]
   },
@@ -278,7 +272,7 @@
     }
    ],
    "source": [
-    "# Check the dimensions of the dataset (rows, columns)\n",
+    "# Check dataset dimensions\n",
     "fp.shape"
    ]
   },
@@ -289,13 +283,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare features (X) and target variable (y)\n",
-    "# Target: Overall risk level rating column\n",
+    "# Separate features and target, convert to binary classification\n",
     "target_col = '12. Overall, how would you rate the risk level of harassment in that situation?'\n",
-    "X = fp.drop(target_col, axis=1)  # All features except target\n",
-    "y = fp[target_col]  # Target variable\n",
-    "\n",
-    "# Convert to binary classification: 1 if above median (high risk), 0 otherwise (low risk)\n",
+    "X = fp.drop(target_col, axis=1)\n",
+    "y = fp[target_col]\n",
     "y = (y > y.median()).astype(int)"
    ]
   },
@@ -306,9 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data into training (80%) and testing (20%) sets\n",
-    "# stratify=y ensures balanced class distribution in both sets\n",
-    "# random_state=42 for reproducibility\n",
+    "# Split data into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
    ]
   },
@@ -319,9 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize Support Vector Machine (SVM) Classifier\n",
-    "# probability=True: Enable probability estimates for ROC-AUC calculation\n",
-    "# SVM finds the optimal hyperplane that maximizes the margin between classes\n",
+    "# Initialize SVM model\n",
     "model = SVC(probability=True, random_state=42)"
    ]
   },
@@ -1261,8 +1248,7 @@
     }
    ],
    "source": [
-    "# Train the SVM model on the training data\n",
-    "# The model finds the optimal decision boundary between classes\n",
+    "# Train the model\n",
     "model.fit(X_train, y_train)"
    ]
   },
@@ -1273,9 +1259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions on the test set\n",
-    "# y_pred: Binary predictions (0 or 1)\n",
-    "# y_pred_proba: Probability of positive class (for ROC-AUC calculation)\n",
+    "# Make predictions on test set\n",
     "y_pred = model.predict(X_test)\n",
     "y_pred_proba = model.predict_proba(X_test)[:, 1]"
    ]
@@ -1298,7 +1282,7 @@
     }
    ],
    "source": [
-    "# Calculate Accuracy: Proportion of correct predictions\n",
+    "# Calculate accuracy\n",
     "accuracy_score(y_test, y_pred)"
    ]
   },
@@ -1320,8 +1304,7 @@
     }
    ],
    "source": [
-    "# Calculate Precision: Proportion of positive predictions that are correct\n",
-    "# High precision = fewer false positives\n",
+    "# Calculate precision\n",
     "precision_score(y_test, y_pred)"
    ]
   },
@@ -1343,8 +1326,7 @@
     }
    ],
    "source": [
-    "# Calculate Recall (Sensitivity): Proportion of actual positives correctly identified\n",
-    "# High recall = fewer false negatives\n",
+    "# Calculate recall\n",
     "recall_score(y_test, y_pred)"
    ]
   },
@@ -1366,8 +1348,7 @@
     }
    ],
    "source": [
-    "# Calculate F1-Score: Harmonic mean of precision and recall\n",
-    "# Balances both metrics (useful for imbalanced datasets)\n",
+    "# Calculate F1-score\n",
     "f1_score(y_test, y_pred)"
    ]
   },
@@ -1389,8 +1370,7 @@
     }
    ],
    "source": [
-    "# Calculate ROC-AUC Score: Model's ability to distinguish between classes\n",
-    "# Score of 1.0 = perfect classifier, 0.5 = random classifier\n",
+    "# Calculate ROC-AUC score\n",
     "roc_auc_score(y_test, y_pred_proba)"
    ]
   },
@@ -1412,7 +1392,7 @@
     }
    ],
    "source": [
-    "# Display comprehensive classification report with all metrics\n",
+    "# Display classification report\n",
     "classification_report(y_test, y_pred)"
    ]
   },
@@ -1434,8 +1414,7 @@
     }
    ],
    "source": [
-    "# Visualize Confusion Matrix\n",
-    "# Shows the distribution of true positives, true negatives, false positives, and false negatives\n",
+    "# Visualize confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues')\n",
@@ -1463,9 +1442,7 @@
     }
    ],
    "source": [
-    "# Plot ROC Curve (Receiver Operating Characteristic)\n",
-    "# Visualizes the trade-off between true positive rate and false positive rate\n",
-    "# Higher AUC (Area Under Curve) indicates better model performance\n",
+    "# Plot ROC curve\n",
     "fpr, tpr, thresholds = roc_curve(y_test, y_pred_proba)\n",
     "roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
     "\n",
@@ -1495,9 +1472,6 @@
    "outputs": [],
    "source": [
     "# Define hyperparameter grid for tuning\n",
-    "# C: Regularization parameter (smaller values = stronger regularization)\n",
-    "# kernel: Type of kernel function ('linear' for linear boundary, 'rbf' for non-linear)\n",
-    "# gamma: Kernel coefficient ('scale' = 1/(n_features*X.var()), 'auto' = 1/n_features)\n",
     "param_grid = {\n",
     "    \"C\": [0.1, 1, 10],\n",
     "    \"kernel\": ['linear', 'rbf'],\n",
@@ -1513,9 +1487,6 @@
    "outputs": [],
    "source": [
     "# Initialize GridSearchCV for hyperparameter tuning\n",
-    "# cv=5: 5-fold cross-validation\n",
-    "# scoring='accuracy': Optimize for accuracy\n",
-    "# n_jobs=-1: Use all available CPU cores for parallel processing\n",
     "grid = GridSearchCV(SVC(probability=True, random_state=42), param_grid, cv=5, scoring='accuracy', n_jobs=-1)"
    ]
   },
@@ -2631,8 +2602,7 @@
     }
    ],
    "source": [
-    "# Train the model with all hyperparameter combinations using cross-validation\n",
-    "# This will find the best combination of parameters\n",
+    "# Train model with hyperparameter tuning\n",
     "grid.fit(X_train, y_train)"
    ]
   },
@@ -2652,7 +2622,7 @@
     }
    ],
    "source": [
-    "# Display the best hyperparameters and their cross-validation accuracy\n",
+    "# Display best hyperparameters\n",
     "print(\"Best parameters:\", grid.best_params_)\n",
     "print(\"Best CV accuracy:\", grid.best_score_)"
    ]
@@ -2664,7 +2634,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Extract the best model from GridSearchCV\n",
+    "# Get best model\n",
     "best_model = grid.best_estimator_"
    ]
   },
@@ -2675,7 +2645,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions using the tuned model\n",
+    "# Make predictions with tuned model\n",
     "y_pred_tuned = best_model.predict(X_test)\n",
     "y_pred_proba_tuned = best_model.predict_proba(X_test)[:, 1]"
    ]
@@ -2698,7 +2668,7 @@
     }
    ],
    "source": [
-    "# Calculate accuracy of the tuned model\n",
+    "# Calculate accuracy of tuned model\n",
     "accuracy_score(y_test, y_pred_tuned)"
    ]
   },
@@ -2720,7 +2690,7 @@
     }
    ],
    "source": [
-    "# Display classification report for the tuned model\n",
+    "# Display classification report for tuned model\n",
     "classification_report(y_test, y_pred_tuned)"
    ]
   },
@@ -2742,7 +2712,7 @@
     }
    ],
    "source": [
-    "# Visualize confusion matrix for the tuned model\n",
+    "# Visualize confusion matrix for tuned model\n",
     "cm_tuned = confusion_matrix(y_test, y_pred_tuned)\n",
     "plt.figure(figsize=(6, 4))\n",
     "sns.heatmap(cm_tuned, annot=True, fmt='d', cmap='Greens')\n",
@@ -2770,8 +2740,7 @@
     }
    ],
    "source": [
-    "# Compare model performance before and after hyperparameter tuning\n",
-    "# Visualize all metrics side by side to see improvement\n",
+    "# Compare model performance before and after tuning\n",
     "metrics = ['Accuracy', 'Precision', 'Recall', 'F1-Score', 'ROC-AUC']\n",
     "before = [accuracy_score(y_test, y_pred), precision_score(y_test, y_pred), \n",
     "          recall_score(y_test, y_pred), f1_score(y_test, y_pred), roc_auc_score(y_test, y_pred_proba)]\n",
@@ -2816,9 +2785,7 @@
     }
    ],
    "source": [
-    "# Save the trained model to disk for later use\n",
-    "# Creates the models directory if it doesn't exist\n",
-    "# Saves the best model as a pickle file\n",
+    "# Save the trained model\n",
     "os.makedirs('../models', exist_ok=True)\n",
     "joblib.dump(best_model, '../models/svm_model.pkl')\n",
     "print(\"Model saved!\")"
